<resources>
    <string name="app_name">CitasMedico</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">La dirección de correo es inválida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Debes de activar los permisos necesarios"</string>
    <string name="o">"o"</string>
    <string name="REGISTRARSE">"REGISTRARSE"</string>
    <string name="crear_cuenta">"Crear Cuenta"</string>
</resources>
